crates/slipway-core/tests/compile_fail/scrollable_bundle_partial_widget.stderr
error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayContainerLayoutPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayChildConstraintPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayLayoutInvalidationPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayLayoutEvidencePolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayViewportObservationPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayVirtualCollectionPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayHitTesting` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayEventRoutingPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwayEventDispositionPolicy` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`

error[E0277]: `PartialListWidget` does not satisfy the `SlipwayScrollableContainerCapability` bundle (scrollable containers)
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:145:32
    |
145 |     requires_scrollable_bundle(&PartialListWidget);
    |     -------------------------- ^^^^^^^^^^^^^^^^^^ missing one or more supertraits of the scrollable-container capability bundle
    |     |
    |     required by a bound introduced by this call
    |
help: the trait `SlipwaySemantics` is not implemented for `PartialListWidget`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:10:1
    |
 10 | struct PartialListWidget;
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: each missing supertrait is named in its own `help:` line of this error; implement the LOAD-BEARING ones by hand: SlipwaySsot + SlipwayLogic + SlipwayView (= SlipwayWidget), SlipwayScrollBehaviorPolicy, SlipwayWheelRoutingPolicy, SlipwayEventRoutingPolicy, and SlipwayEventDispositionPolicy
    = note: the remaining bounds are RESERVED (no runtime consumer; real logic in them is a silent no-op): SlipwayContainerLayoutPolicy, SlipwayChildConstraintPolicy, SlipwayLayoutInvalidationPolicy, SlipwayLayoutEvidencePolicy, SlipwayViewportObservationPolicy, SlipwayVirtualCollectionPolicy, SlipwayHitTesting, SlipwaySemantics — satisfy every RESERVED bound at once with `slipway_core::reserved_policy_defaults!(YourWidget);`
    = note: required for `PartialListWidget` to implement `slipway_core::SlipwayScrollableContainerCapability`
note: required by a bound in `requires_scrollable_bundle`
   --> tests/compile_fail/scrollable_bundle_partial_widget.rs:142:34
    |
142 | fn requires_scrollable_bundle<T: SlipwayScrollableContainerCapability>(_widget: &T) {}
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_scrollable_bundle`
